<resources>
    <string name="app_name">EzBuild</string>
    <string name="splash_screen_title">EzBuild</string>
    <string name="title_login">LOGIN</string>
    <string name="lbl_login">Login</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_confirm_password">Confirm password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_lbl_login">LOGIN</string>
    <string name="lbl_don_t_have_an_account">Don\'t have an account?</string>
    <string name="lbl_register">Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_registration">REGISTRATION</string>
    <string name="et_hint_full_name">Name and surname</string>
    <string name="et_hint_company_name">Firm name</string>
    <string name="btn_lbl_register">REGISTER</string>
    <string name="lbl_change_password">Change password</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="btn_lbl_submit">CONFIRM</string>
    <string name="lbl_change_password_description">Please enter your email address so that we can send you an email with instructions for changing your password.</string>
    <string name="err_msg_enter_full_name">Please enter your name and surname.</string>
    <string name="err_msg_enter_company_name">Please enter your firm name.</string>
    <string name="err_msg_enter_email">Please enter your email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_enter_password_add_employee">Please enter password for employee.</string>
    <string name="err_msg_select_employee_type">Please select employee type.</string>
    <string name="register_successful">Registration successful.</string>
    <string name="err_msg_password_must_match">Password and confirm password must be equal.</string>
    <string name="err_msg_password_must_be_longer">Password must have at least 6 characters.</string>
    <string name="err_msg_enter_login_email">Please enter valid email address.</string>
    <string name="err_msg_enter_valid_password">Password must have at least 6 characters.</string>
    <string name="please_wait">Please wait…</string>
    <string name="lbl_email_to_reset_password_sent">Email with instructions for changing password has been sent to your email address.</string>
    <string name="error_api_login">Error while logging in. Please try again later.</string>
    <string name="navigation_title_construction_sites">Construction Sites</string>
    <string name="add_construction_site">Add construction site</string>
    <string name="error_api_construction_sites_loading_fail">An error occurred while loading construction sites.</string>
    <string name="image_contentDescription">image</string>
    <string name="et_hint_full_address">Full address</string>
    <string name="et_title_select_image_action">Image selection</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="msg_permissions_turned_off">It looks like you have turned off permissions required for this feature. It can be enabled under Application Settings."</string>
    <string name="btn_go_to_settings">GO TO SETTINGS</string>
    <string name="btn_cancel">Cancel</string>
    <string name="director">Director</string>
    <string name="et_hint_cs_manager">Construction Site Manager</string>
    <string name="title_select_employee_type">Employee Type</string>
    <string name="title_select_engineer">Engineers</string>
    <string name="google_maps_api_key">placeholder</string>
    <string name="btn_lbl_add_worker">Add employee</string>
    <string name="title_select_unassigned_employee">Physical workers</string>
    <string name="lbl_no_unassigned_employees_added_yet">There are currently no added physical workers.</string>
    <string name="lbl_no_more_unassigned_employees">All possible physical workers have been added.</string>
    <string name="btn_lbl_add_cs">Add construction site</string>
    <string name="lbl_add_cs_active_cs">Active construction site</string>
    <string name="please_select_image">Please select an image.</string>
    <string name="please_select_cs_manager">Please select construction site manager.</string>
    <string name="please_select_cs_address">Please enter full address for construction site.</string>
    <string name="lbl_no_construction_sites_available">There are currently no construction sites added.</string>
    <string name="lbl_cs_address">Address:</string>
    <string name="lbl_cs_manager">Manager:</string>
    <string name="lbl_cs_number_of_workers">Number of workers:</string>
    <string name="lbl_construction_site_details">CS details</string>
    <string name="lbl_active_cs">Active construction sites</string>
    <string name="lbl_inactive_cs">Inactive construction sites</string>
    <string name="lbl_cs_details_full_address">Construction site address:</string>
    <string name="lbl_cs_details_cs_manager">Construction site manager:</string>
    <string name="btn_lbl_add_diary_entry">Add diary entry</string>
    <string name="lbl_cs_details_cs_status">Construction site status:</string>
    <string name="lbl_no_active_construction_sites_available">There are currently no active construction sites.</string>
    <string name="lbl_no_inactive_construction_sites_available">There are currently no inactive construction sites.</string>
    <string name="lbl_construction_sites_available">There are currently no construction sites.</string>
    <string name="lbl_cs_details_status_active">Active</string>
    <string name="lbl_cs_details_status_inactive">Inactive</string>
    <string name="lbl_no_unassigned_employees_added_yet_for_cs">There are currently no added physical workers for the selected construction site</string>
    <string name="lbl_cs_details_cs_assigned_employees">Construction site workers:</string>
    <string name="btn_lbl_show_on_map">Show on map</string>
    <string name="lbl_cs_map">Construction sites map</string>
    <string name="navigation_title_map_construction_site">Construction sites map</string>
    <string name="lbl_cs_location">Construction site location</string>
    <string name="title_current_location">Current location</string>
    <string name="lbl_cs_locations">Construction sites locations</string>
    <string name="lbl_cs_details_cs_diary_entries">Diary entries:</string>
    <string name="lbl_no_diary_entries_added_for_cs">There are currently no diary entries added for the selected construction site</string>
    <string name="lbl_cs_diary_entry_date">Date of entry:</string>
    <string name="lbl_cs_diary_entry_description_work_day">Work day description:</string>
    <string name="lbl_cs_diary_entry_authorized_employee">Authorized person:</string>
    <string name="navigation_title_new_diary_entry">New diary entry</string>
    <string name="btn_lbl_save">Save</string>
    <string name="btn_lbl_save_diary_entry">Save diary entry</string>
    <string name="et_hint_date_of_diary_entry">Date of diary entry</string>
    <string name="et_hint_diary_entry">Diary entry</string>
    <string name="please_select_diary_entry_date">Please select the date of the diary entry.</string>
    <string name="please_insert_diary_entry">Please enter diary entry.</string>
    <string name="action_edit_entry">Edit entry</string>
    <string name="action_delete_entry">Delete entry</string>
    <string name="title_delete_diary_entry">Delete diary entry</string>
    <string name="msg_delete_diary_entry_dialog">Are you sure you want to delete the diary entry?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="error_api_delete_diary_entry_fail">An error occurred while deleting the diary entry.</string>
    <string name="error_api_delete_construction_site_fail">An error occurred while deleting the construction site.</string>
    <string name="navigation_title_edit_diary_entry">Edit diary entry</string>
    <string name="action_edit_construction_site">Edit construction site</string>
    <string name="action_delete_construction_site">Delete construction site</string>
    <string name="title_delete_construction_site">Delete construction site</string>
    <string name="msg_delete_construction_site_dialog">Are you sure you want to delete the construction site?</string>
    <string name="navigation_title_edit_construction_site">Edit construction site</string>
    <string name="btn_edit_save_cs">Save changes</string>
    <string name="title_employees">Employees</string>
    <string name="title_meetings">Meetings</string>
    <string name="title_warehouse">Warehouse</string>
    <string name="title_profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_work_hours">Work hours</string>
    <string name="lbl_engineers">Engineers</string>
    <string name="lbl_physical_workers">Physical workers</string>
    <string name="lbl_no_physical_workers_added">There are currently no physical workers added</string>
    <string name="lbl_no_engineers_added">There are currently no engineers added</string>
    <string name="add_employee">Add employee</string>
    <string name="lbl_warehouse_manager">Warehouse manager</string>
    <string name="lbl_no_warehouse_manager_added">There is currently no warehouse manager added</string>
    <string name="error_api_employees_loading_fail">An error occurred while retrieving employee data.</string>
    <string name="lbl_type">Type:</string>
    <string name="lbl_full_name">Full name:</string>
    <string name="lbl_phone_number">Phone number:</string>
    <string name="type_director">Director</string>
    <string name="type_engineer">Engineer</string>
    <string name="type_physical_worker">Physical worker</string>
    <string name="type_warehouse_manager">Warehouse manager</string>
    <string name="action_delete_employee">Delete employee</string>
    <string name="action_edit_employee">Edit employee</string>
    <string name="lbl_employee_name_and_surname">Name and surname:</string>
    <string name="lbl_employee_type">Employee type:</string>
    <string name="lbl_user_has_no_given_email">The user does not have an assigned email address</string>
    <string name="lbl_employee_email">Email:</string>
    <string name="lbl_employee_phone_number">Phone number:</string>
    <string name="lbl_employee_construction_sites">Employee construction sites:</string>
    <string name="lbl_employee_details_no_construction_sites">The employee is not assigned to any construction site</string>
    <string name="lbl_employee_details_work_hours">Work hours by month:</string>
    <string name="lbl_employee_details_no_work_hours">The employee currently has no working hours</string>
    <string name="lbl_time_picker">Time picker</string>
    <string name="btn_confirm">Confrim</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="btn_lbl_save_changes">Save changes</string>
    <string name="et_hint_warehouse_address">Warehouse address</string>
    <string name="et_hint_warehouse_manager">Warehouse manager</string>
    <string name="navigation_profile">Profile</string>
    <string name="lbl_password_change">Password change</string>
    <string name="et_hint_current_password">Current password</string>
    <string name="et_hint_new_password">New password</string>
    <string name="et_hint_confirm_new_password">Confirm new password</string>
</resources>