<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/navigation_warehouse"
            android:icon="@drawable/ic_warehouse_24"
            android:title="@string/title_warehouse" />

        <item android:id="@+id/navigation_meetings"
            android:icon="@drawable/ic_access_time_filled_24"
            android:title="@string/title_meetings"/>
    </group>

    <group>
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/navigation_profile" />
    </group>

    <item
        android:id="@+id/navigation_log_out"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/lbl_log_out"/>

</menu>