<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_equipment_outline"
    android:paddingBottom="@dimen/_8sdp">

    <hr.itrojnar.ezbuild.utils.EzBuildTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_password_change"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_current_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_current_password"
        android:textColorHint="@color/color_secondary_text">

        <hr.itrojnar.ezbuild.utils.EzBuildEditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_new_password"
        android:textColorHint="@color/color_secondary_text">

        <hr.itrojnar.ezbuild.utils.EzBuildEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_confirm_new_password"
        android:textColorHint="@color/color_secondary_text">

        <hr.itrojnar.ezbuild.utils.EzBuildEditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <hr.itrojnar.ezbuild.utils.EzBuildButton
            android:id="@+id/btn_dialog_change_password_confirm"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/btn_confirm"/>

        <hr.itrojnar.ezbuild.utils.EzBuildButton
            android:id="@+id/btn_dialog_change_password_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginStart="@dimen/_25sdp"
            android:textColor="@color/white"
            android:text="@string/btn_cancel"/>

    </LinearLayout>
</LinearLayout>