<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    tools:context=".view.fragments.LoginFragment">

    <hr.itrojnar.ezbuild.utils.EzBuildTextViewBold
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        android:text="@string/title_change_password"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <hr.itrojnar.ezbuild.utils.EzBuildTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/lbl_change_password_description"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_change_password_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email"
        android:textColorHint="@color/color_secondary_text">

        <hr.itrojnar.ezbuild.utils.EzBuildEditText
            android:id="@+id/et_change_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:text="abc@gmail.com"/>

    </com.google.android.material.textfield.TextInputLayout>

    <hr.itrojnar.ezbuild.utils.EzBuildButton
        android:id="@+id/btn_change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/btn_lbl_submit"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>